assets/styl/objects/_clients.styl
.clients
  h2
    color: bdBlue

.clients-logos
  text-align: center
  margin-bottom: 50px

.clients-logo
  display: inline-block
  padding: 15px
  img
    display: block
    height: 60px
    width: auto
    -webkit-filter: grayscale(100%)
    -moz-filter: grayscale(100%)
    -o-filter: grayscale(100%)
    -ms-filter: grayscale(100%)
    filter: grayscale(100%)
    &:hover
      -webkit-filter: none
      -moz-filter: none
      -o-filter: none
      -ms-filter: none
      filter: none
      transition: all 0.1s ease-in-out

